--- a/Enhance/packages.config
+++ b/Enhance/packages.config
@@ -2,7 +2,13 @@
 <packages>
   <package id="BoDi" version="1.5.0" targetFramework="net472" />
   <package id="Gherkin" version="19.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="NUnit" version="3.13.1" targetFramework="net472" />
+  <package id="RestSharp" version="106.5.4" targetFramework="net472" />
+  <package id="RestSharp.Newtonsoft.Json" version="1.5.1" targetFramework="net472" />
+  <package id="Selenium.Support" version="4.8.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="4.8.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="109.0.5414.7400" targetFramework="net472" />
   <package id="SpecFlow" version="3.9.74" targetFramework="net472" />
   <package id="SpecFlow.Internal.Json" version="1.0.8" targetFramework="net472" />
   <package id="SpecFlow.NUnit" version="3.9.74" targetFramework="net472" />
